<resources>
    <string name="app_name">Trivia</string>
    <string name="title">Trivia</string>
    <string name="false_title">False</string>
    <string name="true_title">True</string>
    <string name="previous_button">previous_button</string>
    <string name="next_button">next_button</string>
    <string name="correct_answer">Correct!</string>
    <string name="wrong_answer">Wrong!</string>
</resources>